Fix background image size on mobile

--- a/TheHillsShootout.css
+++ b/TheHillsShootout.css
@@ -1,8 +1,12 @@
 body {
-    background-image: url("img/TheHills.jpg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-   }
+    background: url("img/TheHills.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+}
 
 * {
     cursor: crosshair;
